footer logos - fix spacing

--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -119,7 +119,6 @@ a:hover {
 }
 
 .footer-top {
-  height: 17.8125rem;
   background-color: #f5f9fc;
 }
 
